# hardwarebot

./: Hardware-bot v1.3mf
hardwarebot/: CMakeLists.txt  package.xml
hardwarebot/config/: gripperbot.rviz  trajectory_controller.yaml
hardwarebot/description/: beams.xacro  robot.srdf  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
hardwarebot/hardware/: hardwarebot_system.cpp  hardwarebot_system.hpp  hardwarebot_system_plugin.xml
hardwarebot/launch/: bringup_real.launch.py  moveit.launch.py  rsp.launch.py  sim.launch.py
hardwarebot/meshes/: Component10_1.stl  Component1_1.stl  Component3_1.stl  Component5_1.stl  Component8_1.stl  Component9_1.stl  base_link.stl
hardwarebot/moveit/: chomp_planning.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_planning.yaml  ompl_planning.yaml  trajopt_planning.yaml
hardwarebot/worlds/: built.world  one_less_box.world
